<resources>
    <string name="app_name">Convert It!</string>
    <string name="welcome">Select Unit:</string>
    <string name="enterValue">Enter Value:</string>
    <string name="convert">Convert Now!</string>
    <string name="action_settings">Settings</string>

    <string name="length_Title">Convert It! - Length</string>
    <string name="title_activity_length">LengthActivity</string>
    <string name="enterLength">Enter Length</string>
    <string name="lengthMenu">Convert Length</string>
    <string name="lengthHeader">Length</string>

    <string name="temp_Title">Convert It! - Temperature</string>
    <string name="title_activity_temp">TemperatureActivity</string>
    <string name="enterTemp">Enter Temperature</string>
    <string name="tempMenu">Convert Temperature</string>
    <string name="tempHeader">Temperature</string>

    <string name="time_Title">Convert It! - Time</string>
    <string name="title_activity_time">TimeActivity</string>
    <string name="enterTime">Enter Time</string>
    <string name="timeMenu">Convert Time</string>
    <string name="timeHeader">Time</string>

    <string name="volume_Title">Convert It! - Volume</string>
    <string name="title_activity_volume">VolumeActivity</string>
    <string name="enterVolume">Enter Volume</string>
    <string name="volumeMenu">Convert Volume</string>
    <string name="volumeHeader">Volume</string>

    <string name="weight_Title">Convert It! - Weight</string>
    <string name="title_activity_weight">WeightActivity</string>
    <string name="enterWeight">Enter Weight</string>
    <string name="weightMenu">Convert Weight</string>
    <string name="weightHeader">Weight</string>

</resources>
