<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_length"
        android:title="@string/lengthMenu"
        android:menuCategory="container"
        app:showAsAction="never"
        android:orderInCategory="100"/>

    <item android:id="@+id/action_temp"
        android:title="@string/tempMenu"
        android:menuCategory="container"
        app:showAsAction="never"
        android:orderInCategory="100"/>

    <item android:id="@+id/action_time"
        android:title="@string/timeMenu"
        android:menuCategory="container"
        app:showAsAction="never"
        android:orderInCategory="100"/>

    <item android:id="@+id/action_volume"
        android:title="@string/volumeMenu"
        android:menuCategory="container"
        app:showAsAction="never"
        android:orderInCategory="100"/>

    <item android:id="@+id/action_weight"
        android:title="@string/weightMenu"
        android:menuCategory="container"
        app:showAsAction="never"
        android:orderInCategory="100"/>
</menu>
