<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/weight"
    tools:context="com.teamdevelopment.b.unitconversion.WeightActivity">

    <TextView android:text="@string/weightHeader"
        style="@style/h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weightHeader" />

    <Spinner
        android:id="@+id/convertFromWeight"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/weightHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/convertToWeight"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/convertFromWeight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editText"
        android:lines="1"
        android:maxLines="1"
        android:width="200dp"
        android:layout_centerInParent="true"
        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:inputType="numberDecimal"
        android:digits="0123456789."
        android:hint="@string/enterWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/convertToWeight" />

    <TextView
        android:id="@+id/weightResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:text=""
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/fact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_below="@+id/weightResult"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/weightButton"
        android:text="@string/convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
